--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="text_margin_large">24dp</dimen>
     <dimen name="text_margin_top_nthElement">20dp</dimen>
     <dimen name="text_margin_top_First">55dp</dimen>
+    <dimen name="title_large">24sp</dimen>
+    <dimen name="text_price">18sp</dimen>
 </resources>
