--- a/app/src/main/res/menu/save_menu.xml
+++ b/app/src/main/res/menu/save_menu.xml
@@ -3,5 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/save_menu"
         android:title="@string/save_menu"
-        app:showAsAction="always"></item>
+        app:showAsAction="always"/>
+    <item android:id="@+id/delete_menu"
+        android:title="@string/delete_deal"
+        app:showAsAction="never"/>
 </menu>
